--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -32,4 +32,13 @@ jobs:
       - name: Synopsys Detect
         uses: blackducksoftware/github-action@2.0.1
         with:
-          args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}"  --detect.project.name="${{ secrets.BLACKDUCK_PROJECT_NAME }}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.excluded.detector.types=GIT --detect.project.version.name="1gh" --detect.risk.report.pdf=true --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules --detect.detector.search.depth=6 '
+          args: |
+           '--blackduck.url="${{ secrets.BLACKDUCK_URL}}"  \
+           --detect.project.name="${{ secrets.BLACKDUCK_PROJECT_NAME }}" \
+           --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" \
+           --detect.excluded.detector.types=GIT \
+           --detect.project.version.name="1gh" \
+           --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules \
+           --detect.detector.search.depth=6'
+
+#            --detect.risk.report.pdf=true \
