added embeded license file

--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -38,7 +38,11 @@ jobs:
            --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN }}" \
            --detect.excluded.detector.types=GIT \
            --detect.project.version.name="1.1-beta" \
-           --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules'
+           --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules \
+           --detect.detector.search.depth=3 \
+           --detect.npm.include.dev.dependencies=false \
+           '
 
-#            --detect.risk.report.pdf=true \
-#            --detect.detector.search.depth=3
+# --detect.risk.report.pdf=true \
+# --detect.detector.search.depth=3 \
+# --detect.npm.include.dev.dependencies=false \
