--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -39,18 +39,17 @@ jobs:
            --detect.excluded.detector.types=GIT \
            --detect.project.version.name="1.3-beta" \
            --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules \
-           --detect.notices.report=true \
            '
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v4
-        with:
-          author_name: Scan Bot
-          author_email: scan@bot
-          message: "new scan report"
-          add: "*.txt"
-          ref: 'release'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}           
+#       - name: Commit changes
+#         uses: EndBug/add-and-commit@v4
+#         with:
+#           author_name: Scan Bot
+#           author_email: scan@bot
+#           message: "new scan report"
+#           add: "*.txt"
+#           ref: 'release'
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}           
            
 
 # --detect.notices.report=true \
