--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -56,3 +56,5 @@ jobs:
 # --detect.notices.report=true \
 # --detect.detector.search.depth=3 \
 # --detect.npm.include.dev.dependencies=false \
+# --detect.policy.check.fail.on.severities=CRITICAL \
+
