--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -22,27 +22,28 @@ jobs:
           go-version: '^1.13.1'
       - run: go version        
       - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          distribution: 'adopt' # See 'Supported distributions' for available options
+          java-version: '11'
       - run: java -version
-      - name: build frontend
-        run: |
-          cd frontend && npm install
-      - name: Synopsys Detect
-        uses: blackducksoftware/github-action@2.0.1
-        env:
-          SYNOPSYS_SKIP_PHONE_HOME: true
-        with:
-          args: |
-           '--blackduck.url="${{ secrets.BLACKDUCK_URL}}"  \
-           --detect.project.name="${{ secrets.BLACKDUCK_PROJECT_NAME }}" \
-           --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN }}" \
-           --detect.excluded.detector.types=GIT \
-           --detect.project.version.name="1.3-beta" \
-           --detect.detector.search.depth=3 \
-           --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules \
-           '
+#       - name: build frontend
+#         run: |
+#           cd frontend && npm install
+#       - name: Synopsys Detect
+#         uses: blackducksoftware/github-action@2.0.1
+#         env:
+#           SYNOPSYS_SKIP_PHONE_HOME: true
+#         with:
+#           args: |
+#            '--blackduck.url="${{ secrets.BLACKDUCK_URL}}"  \
+#            --detect.project.name="${{ secrets.BLACKDUCK_PROJECT_NAME }}" \
+#            --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN }}" \
+#            --detect.excluded.detector.types=GIT \
+#            --detect.project.version.name="1.3-beta" \
+#            --detect.detector.search.depth=3 \
+#            --detect.blackduck.signature.scanner.exclusion.name.pattern=.git,node_modules \
+#            '
 #       - name: Commit changes
 #         uses: EndBug/add-and-commit@v4
 #         with:
